fix overflow of staff bar

--- a/static/css/layout/v2.less
+++ b/static/css/layout/v2.less
@@ -8,6 +8,7 @@
   border: 1px solid @dark-beige;
   z-index: @z-index-level-1;
   position: relative;
+  overflow: hidden;
 }
 
 // stylelint-disable-next-line no-descending-specificity
